--- a/src/app/v2/components/financing-item/financing-item.component.html
+++ b/src/app/v2/components/financing-item/financing-item.component.html
@@ -11,11 +11,14 @@
     @if (data?.institucion) {
       <span class="bg-green-50 text-green-700 text-xs px-2 py-1 rounded-full">{{ data?.institucion }}</span>
     }
+    @if (data?.recomendado) {
+      <span class="bg-green-100 text-green-800 text-xs px-2 py-1 rounded-full">Recomendado</span>
+    }
   </div>
   
   <!-- Descripción con estilo mejorado -->
   <div class="text-gray-600 mb-4 text-sm leading-relaxed"
-    [innerHTML]="data.descripcion | truncate : 120 : true">
+    [innerHTML]="resourcesService.sanitizedString(data.descripcion | truncate : 120 : true)">
   </div>
   
   <!-- Botón 'Ver Más' con estilo mejorado -->
@@ -50,6 +53,17 @@
   >
     {{ data.titulo }}
   </a>
+  
+  @if (data?.recomendado) {
+  <p class="text-md text-gray-700 pb-2 flex items-center">
+    <span class="text-yellow-500 mr-1">
+      <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
+        <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z" />
+      </svg>
+    </span>
+    <strong class="text-yellow-600">Te recomendamos</strong>
+  </p>
+  }
   
   <!-- Etiquetas con estilo mejorado -->
   <div class="mb-3 flex flex-wrap gap-2">
@@ -86,7 +100,7 @@
     <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 text-gray-400 mr-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13.828 10.172a4 4 0 00-5.656 0l-4 4a4 4 0 105.656 5.656l1.102-1.101m-.758-4.899a4 4 0 005.656 0l4-4a4 4 0 00-5.656-5.656l-1.1 1.1" />
     </svg>
-    <!-- Sitio web -->
+    <!-- Sitio web con estilo mejorado -->
     <small class="text-gray-500">
       {{ resourcesService.getDomain(data.link) }}
     </small>
@@ -99,5 +113,4 @@
     </span>
   </p>
 </div>
-
 }
