--- a/src/app/v2/components/article-item/article-item.component.html
+++ b/src/app/v2/components/article-item/article-item.component.html
@@ -12,7 +12,7 @@
       <span class="bg-gray-100 text-gray-800 text-xs px-2 py-1 rounded-full">{{ resourceService.getPublicationYear(data?.fecha_publicacion) }}</span>
     }
     @if (data?.recomendado) {
-      <span class="bg-green-100 text-green-800 text-xs px-2 py-1 rounded-full">Recomendado</span>
+      <span class="bg-yellow-500  text-xs px-2 py-1">Recomendado</span>
     }
   </div>
   
@@ -56,6 +56,9 @@
   
   <!-- Etiquetas con estilo mejorado -->
   <div class="mb-3 flex flex-wrap gap-2">
+    @if (data.recomendado) {
+      <span class="bg-green-50 text-orange-600 px-2 py-1  rounded-md">Recomendado</span>
+    }
     @if (data.idioma.toLowerCase() === 'ingles') {
       <span class="bg-blue-50 text-blue-600 px-2 py-1 text-xs rounded-md">En Inglés</span>
     }
@@ -65,9 +68,7 @@
     @if (data.articulo_paper.toLowerCase() === 'articulo') {
       <span class="bg-indigo-50 text-indigo-600 px-2 py-1 text-xs rounded-md">Artículo</span>
     }
-    @if (data.recomendado) {
-      <span class="bg-green-50 text-green-600 px-2 py-1 text-xs rounded-md">Recomendado</span>
-    }
+ 
   </div>
   
   <!-- Resumen con estilo mejorado -->
